# othello

./: Cargo.toml  README.md
.cargo/: config.toml
src/: arena.rs  board.rs  board_math.rs  coach.rs  game.rs  main.rs  mcts.rs  n_net.rs  neural_net.rs  othello.rs  othello_neural_net.rs
src/othello/: tests.rs
