[package]
name = "othello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.12.1", features = ["train", "tch", "cuda"] }
rand = { version = "0.8.5" }
serde = { version = "1.0.197" }
serde-pickle = { version = "1.1.1" }
